<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project AIO</string>
    <string name="app_caption">Project AIO</string>
    <string name="title_Home">Project AIO</string>
    <string name="title_Login">Sign In</string>
    <string name="title_GroupSMS">Group SMS</string>
    <string name="title_Reports">Delivery Reports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="show_contacts">Contacts</string>
    <string name="sync_profile_text">Sync Profile</string>
    <string name="register_again_text">Remove Activation Key</string>
    <string name="register_again_msg">Activation Key Removed. You can register again to get new activation key</string>
    <string name="title_activity_fullscreen">Group SMS</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_group_sms">Group SMS</string>
    <string name="send_text">Send</string>
    <string name="send_to">To</string>
    <string name="msg_text">Type Message</string>
    <string name="IC">Internet: Connected</string>
    <string name="NC">Internet: Not Connected</string>
    <string name="default_sent_to_txt">To:</string>
    <string name="default_msg_text">Message</string>
    <string name="default_msg_status">Sending…</string>
    <string name="btn_send_msg_content_description">Sent this message</string>

    <string-array name="drawer_menu_list">
        <item>Update Profile</item>
        <item>Scheme Progress</item>
        <item>Group SMS</item>
        <item>Contacts</item>
        <item>Exit</item>
    </string-array>

    <string name="title_activity_login">Sign In</string>
    <string name="update_profile">Update Profile</string>
    <string name="login_message">Mobile No</string>
    <string name="btn_update_profile_text">Update Profile</string>
    <string name="img_btn_update_profile_text">Login/Update Profile</string>
    <string name="login_wait_message">Checking your registration data with the SMS Gateway Server to sync your profile…</string>
    <string name="btn_login_text">Start using the App</string>
    <string name="btn_scan_barcode_text">Generate and Verify OTP</string>

    <string name="msg_show_contacts">Will be available on next Update</string>

    <!-- Confirmation message displayed in a toast after adding new account -->
    <string name="secret_saved">Secret saved</string>
    <string name="msg_otp_delayed">Please wait for a while to generate new OTP for Mobile No:</string>

    <!--
         Question asking user to confirm adding a new account, the details of which were obtained
         by scanning a QR code or provided by the web browser.
    -->
    <string name="save_key_message">Save key for</string>

    <!-- Error message displayed if the scanned QR code contains an empty key -->
    <string name="error_empty_secret">Cannot save empty secret</string>

    <!-- Error message displayed if user enters a key that is shorter than allowed minimum -->
    <string name="enter_key_too_short">Key value is too short</string>

    <!-- Error message displayed if user enters a key with an illegal character -->
    <string name="enter_key_illegal_char">Key value has illegal character</string>

    <!-- Placeholder value displayed for OTP before any codes have been generated -->
    <string name="empty_pin">_ _ _ _ _ _</string>

    <!--
       Title for error message dialog when user attempts to scan a barcode but does not
       have the barcode scanner application installed.
    -->
    <string name="install_dialog_title">Install barcode scanner?</string>

    <!-- Error message displayed when user attempts to scan a barcode without a scanner app. -->
    <string name="install_dialog_message">To scan barcode containing keys, you must install the ZXing barcode scanner.</string>

    <!-- Text on button user clicks to start installation of barcode scanning app -->
    <string name="install_button">Install</string>
    <!-- Button on manual account entry page, cancels adding account, returns to main page -->
    <string name="cancel">Cancel</string>
    <string name="btn_qr_code_description">Scan QR Code</string>
    <string name="title_activity_progress_mpr">Progress</string>
    <string name="lblSchemes">Scheme:</string>
    <string name="lblWorks">Work:</string>
    <string name="lblPhyPrg">Physical Progress</string>
    <string name="lblExpAmount">Expenditure Amount</string>
    <string name="lblRemarks">Remarks:</string>
    <string name="lblBtnSave">Update Progress</string>
    <string name="msg_warn_remarks">Enter Some Remarks</string>
    <string name="title_activity_scheme">Select Scheme</string>
    <string name="lbl_scheme_id">Scheme ID: </string>
    <string name="lbl_scheme_name">Scheme</string>
    <string name="lbl_group_id">Group ID: </string>
    <string name="lbl_group_name">Group</string>
    <string name="lbl_contact_id">Contact ID: </string>
    <string name="lbl_contact_name">Conatact Name</string>
    <string name="title_activity_work">Select Work</string>
    <string name="lbl_work_id">Work ID: </string>
    <string name="lbl_work_name">Work Description</string>
    <string name="lbl_works">Work Progress:</string>
    <string name="lbl_prg_val">: (0%)</string>
    <string name="lbl_balance">Balance: ₹ </string>
    <string name="bal_val">0</string>
    <string name="msg_insufficient_balance">Expenditure is more than balance.</string>
    <string name="lbl_work_remark">Work Remarks:</string>
    <string name="ea_hint">Enter Expenditure Amount</string>
    <string name="sync_otp_text">Sync OTP Generation</string>
    <string name="msg_sync_otp">Synchronizing…</string>
    <string name="lbl_app_version">App Version:</string>
    <string name="msg_about">Developed by NIC, Paschim Medinipur</string>
    <string name="title_activity_user">Select User</string>
    <string name="lbl_username">User Name</string>
    <string name="lblSchemeCount">[ID] Mobile</string>
    <string name="lblSanctionedAmount">Sanction: ₹ </string>
    <string name="title_activity_groups">Groups</string>
</resources>
