<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.abusalam.android.projectaio.mpr.ProgressActivity">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/lblWorks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvPhyPrg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWork"
                android:text="@string/lblPhyPrg"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvPrgVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/sbProgress"
                android:layout_alignTop="@+id/tvPhyPrg"
                android:layout_toEndOf="@+id/tvPhyPrg"
                android:layout_toRightOf="@+id/tvPhyPrg"
                android:text="@string/lbl_prg_val"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <SeekBar
                android:id="@+id/sbProgress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPhyPrg" />

            <TextView
                android:id="@+id/tvLblBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sbProgress"
                android:paddingBottom="10dp"
                android:text="@string/lbl_balance"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvExpAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLblBalance"
                android:text="@string/lblExpAmount"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etExpAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvExpAmount"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/ea_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_work_remark"
                android:id="@+id/tvWorkRemark"
                android:layout_below="@+id/etExpAmount"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/tvRemarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvWorkRemark"
                android:text="@string/lblRemarks"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/etRemarks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvRemarks"
                android:inputType="textAutoComplete"
                android:hint="@string/msg_warn_remarks" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etRemarks"
                android:layout_centerHorizontal="true"
                android:text="@string/lblBtnSave" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
