<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.github.abusalam.android.projectaio.LoginActivity"
    android:id="@+id/ScreenLogIn"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:id="@+id/tvLoginMessage"
        android:layout_toRightOf="@+id/pbLoginWait" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="10"
        android:id="@+id/etUserMobile"
        android:layout_below="@+id/tvLoginMessage"
        android:layout_toLeftOf="@+id/btnUpdateProfile"
        android:phoneNumber="true"
        android:textStyle="bold"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_profile_text"
        android:id="@+id/btnUpdateProfile"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_btn_update_profile_text"
        android:src="@drawable/ic_send"
        android:background="@drawable/btn_pressed_background"
        android:focusableInTouchMode="false"
        android:layout_alignBottom="@+id/etUserMobile"
        android:layout_alignRight="@+id/tvLoginMessage" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoginWait"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/etUserMobile" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text"
        android:id="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvLoginMessage" />
</RelativeLayout>
