<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.github.abusalam.android.projectaio.sms.GroupSMS">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etMsg"
        android:autoText="false"
        android:hint="@string/msg_text"
        android:layout_toLeftOf="@+id/btnSendSMS"
        android:layout_alignParentBottom="true"
        android:clickable="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:maxHeight="@dimen/msg_text_max_height" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:id="@+id/btnSendSMS"
        android:layout_alignBottom="@+id/etMsg"
        android:layout_alignRight="@+id/spinner" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:focusableInTouchMode="false"
        android:spinnerMode="dialog"
        android:layout_alignParentTop="true"
        android:prompt="@string/send_to" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvMsgHist"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:divider="@color/black_overlay"
        android:dividerHeight="@dimen/divider_Height"
        android:layout_above="@+id/etMsg" />

</RelativeLayout>
